IN DEVELOPMENT ======= 1.3.0

- added: controller.custom()

======= 1.2.9

- updated: utils.getContentType()
- updated: binary/empty-project minified debugging.js
- updated: NoSQL v2.0.2 (added: binary.update())
- updated: license

- fixed: framework.usage()
- fixed: framework.backup()
- fixed: template repository
- clean code

======= 1.2.8

- added: referer flag
- added: debugging.js
- added: default accepts *.mp4
- added: template supports rendering of other templates or views
- added: framework.stats.response.timeout
- added: framework.stats.response.notModified
- added: framework.isProcessed()
- added: Number.prototype.VAT
- added: Number.prototype.discount
- added: utils.send(name, [stream or filename], url, [callback], [headers], [method])
- added: utils.download(url, callback, [headers], [method], [params], [encoding])

- updated: framework.backup([callback], [url]);
- updated: NoSQL v2.0.0
- updated: builders.schema(), builders.defaults()
- updated: framework.usage()
- updated: utils.getContentType()
- updated: framework.eval() - framework can eval Function in its context
- updated: binary

- fixed: framework.usage()
- fixed: framework.stats
- fixed: @{user}
- fixed: FrameworkRestrictions
- fixed: template ' character
- fixed: utils.Async - onComplete calling
- fixed: stability
- fixed: markdown parser

- removed: keepalive.js from empty-projects

======= 1.2.7-1

- added: framework.stats.request.delete
- added: framework.stats.request.put
- added: framework.stats.request.blocked
- added: framework.stats.request.pending
- added: framework.stats.response.forwarding (host redirecting)
- added: controller.run() - to run async tasks

- updated: complete rewrited markdown parser (more than 50% better performance)
- updated: complete rewrited markdown example
- updated: framework.usage informations

- fixed: request.hostname()
- fixed: builders.schema (default declaration)

======= 1.2.7

- added: definitions
- added: framework.restrictions class