@@ -2,6 +2,8 @@ IN DEVELOPMENT ======= 1.3.0
 
 - added: controller.custom()
 
+- updated: controller.close([end])
+
 ======= 1.2.9
 
 - updated: utils.getContentType()
